# FM-Pipefactory

./: .gitignore  PipeMeshGenerator.py  README.md  pyproject.toml
examples/example_1_single_cylinder/: simple_cylinder.ipynb  square_shell.msh
examples/example_2_Defects/: defects.ipynb  foo.vtk
pipefactory/: BuildTools.py  FEM_testing.ipynb  Pipe.py  Quality.py  UnitBrick.py  UtilityFunctions.py  __init__.py
pipefactory/Defects/: Defects.py  Refinement.py
pipefactory/FEM/: FEM.py  LinearElastic.py  Loads.py  Mesh.py  intpoints.py  shapefunctions.py
pipefactory/app_testing/: main_app.py
tests/: test_fem.py  test_find_section.py  test_get_orthogonal_inplane.py  test_install.py  test_mesh.py  test_pipe_factory.py  test_rot_vec.py  test_rotate_point_and_triad.py
